:ref: simplified and unified tests